word wrap fix

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -512,6 +512,7 @@ svg {
 // Common
 .nector-rewards-page-container {
 	text-align: center;
+	word-wrap: break-word;
 }
 
 .nector-rewards-section {
